# kanata-layer-indicator

./: Cargo.toml  README.md  justfile
i18n/en/: kanata_layer_indicator.ftl  keyd_layer_indicator.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  main.rs
